--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/src/assets/Logo-pro.png" />
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
             rel="stylesheet"
@@ -21,16 +21,12 @@
             type="text/javascript"
             src="//js.hsforms.net/forms/embed/v2.js"
         ></script>
-        <!-- <script
-            charset="utf-8"
-            type="text/javascript"
-            src="//js.hsforms.net/forms/embed/v2.js"
-        ></script> -->
+
         <script>
             var hbspt = window.hbspt || {};
         </script>
 
-        <title>Vite + React</title>
+        <title>CnergyPro</title>
     </head>
     <body>
         <div id="root"></div>
